[package]
name = "meiosim"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
indexmap = "2.2.2"
clap = { version = "4.5.0", features = ["derive"] }
log = "0.4.20"
simplelog = "0.12.1"
regex = "1.5.4"
rust-htslib = "0.45.0"
